src/test/deca/context/invalid/resultats/test_class_inexistent_method-cont.res
./src/test/deca/context/invalid/test_class_inexistent_method.deca:19:9: The method getX is not defined for the class A
